# qllm_pbits

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECTIONS_APPLIED.md  EXPERIMENTAL_RESULTS.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  REPRODUCE.md  SECURITY.md  TESTING_COMPLETE.txt  demo_sampler.py  pyproject.toml  requirements-lock.txt  requirements-tested.txt
.cursor/plans/: p-bit_qllm_sampler_v2-fixed_8642cccb.plan.md
.github/workflows/: ci.yml
docs/: DECISIONS.md  DELIVERABLES.md  DEVLOG_TEMPLATE.md  EXPERIMENTAL_RESULTS.md  NOTES.md  README.md  RESULTS_SUMMARY.md  TESTING_COMPLETE.txt
notebooks/: 01_binary_gibbs_validation.ipynb  02_softmax_vs_pbit_sampler.ipynb
qllm_pbits/: __init__.py
qllm_pbits/experiments/: __init__.py  exp_ising_convergence.py  exp_softmax_match.py  exp_text_generation.py
qllm_pbits/llm/: __init__.py  generate.py  hf_wrapper.py
qllm_pbits/pbits/: __init__.py  gibbs_binary.py  ising.py  metrics.py
qllm_pbits/token_sampler/: __init__.py  base.py  calibration.py  pbit_onehot.py  softmax_baseline.py  vocab_filter.py
qllm_pbits/utils/: __init__.py  cli.py  seeding.py
scripts/: clean_repo.ps1  clean_repo.sh
tests/: __init__.py  test_full_pipeline.py  test_gibbs_binary.py  test_hf_integration.py  test_onehot_validity.py  test_softmax_match_smallV.py  test_vocab_filter.py
