[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qllm-pbits"
version = "0.1.0"
description = "P-bit networks for LLM token sampling - Research proof-of-concept"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Jules Barth", email = "julesbarth13@gmail.com"}]
requires-python = ">=3.11"
keywords = ["machine-learning", "llm", "mcmc", "gibbs-sampling", "p-bit", "token-sampling", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/Farx1/qllm-pbits"
Documentation = "https://github.com/Farx1/qllm-pbits/tree/main/docs"
Issues = "https://github.com/Farx1/qllm-pbits/issues"
dependencies = [
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.30.0,<5.0.0",
    "numpy>=1.24.0,<2.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "jupyter>=1.0.0",
]

[project.scripts]
qllm-pbits = "qllm_pbits.utils.cli:main"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

